--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "next-redux-saga-boilerplate",
+  "name": "new_project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "next": "9.3.2",
-    "next-redux-wrapper": "^4.0.1",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.23.0",
+    "bootstrap": "^5.1.1",
+    "next": "11.1.2",
+    "path": "^0.12.7",
+    "react": "17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "sass": "^1.43.2"
+  },
+  "devDependencies": {
+    "eslint": "8.0.1",
+    "eslint-config-next": "11.1.2"
   }
 }
