--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.43.2"
