--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
-    "next": "11.1.2",
+    "next": "^11.1.2",
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
