--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
+    "ethers": "^5.5.1",
+    "ipfs-http-client": "^54.0.2",
     "next": "^11.1.2",
     "path": "^0.12.7",
     "react": "17.0.2",
@@ -20,7 +22,8 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
-    "sass": "^1.43.2"
+    "sass": "^1.43.2",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "eslint": "8.0.1",
