--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
+    "react-bootstrap-typeahead": "^6.0.0-alpha.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
