--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethers": "^5.5.1",
     "ipfs-http-client": "^54.0.2",
     "next": "^11.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
@@ -24,6 +25,7 @@
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.43.2",
+    "swr": "^1.1.0",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
