--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap-typeahead": "^6.0.0-alpha.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-masonry-component": "^6.3.0",
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.43.2",
