--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
     "sass": "^1.43.2",
+    "sharp": "^0.29.3",
     "swr": "^1.1.0",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
-    "eslint": "8.0.1",
+    "eslint": "^8.4.1",
     "eslint-config-next": "11.1.2"
   }
 }
