--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.3.1",
     "react-masonry-component": "^6.3.0",
     "react-redux": "^7.2.5",
+    "react-select": "^5.2.1",
     "redux-saga": "^1.1.3",
     "sass": "^1.43.2",
     "sharp": "^0.29.3",
