--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new_project",
+  "name": "pet_social",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "ethers": "^5.5.1",
-    "ipfs-http-client": "^54.0.2",
+    "ipfs-http-client": "^55.0.0",
     "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.5",
     "path": "^0.12.7",
@@ -30,9 +30,5 @@
     "sharp": "^0.29.3",
     "swr": "^1.1.0",
     "web3modal": "^1.9.4"
-  },
-  "devDependencies": {
-    "eslint": "^8.4.1",
-    "eslint-config-next": "11.1.2"
   }
 }
