--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethers": "^5.5.1",
     "ipfs-http-client": "^55.0.0",
     "next": "^11.1.2",
+    "eslint": "7.32.0",
     "next-redux-wrapper": "^7.0.5",
     "path": "^0.12.7",
     "react": "17.0.2",
