--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.1",
     "ethers": "^5.5.1",
     "ipfs-http-client": "^55.0.0",
+    "masonic": "^3.6.1",
     "next": "^11.1.2",
     "next-redux-wrapper": "^7.0.5",
     "path": "^0.12.7",
@@ -22,6 +23,7 @@
     "react-bootstrap-typeahead": "^6.0.0-alpha.4",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-component": "^6.3.0",
     "react-redux": "^7.2.5",
     "react-select": "^5.2.1",
