Add involve component, add support in-app purchase for related NFTs functions

--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.16.12",
     "@magic-ext/oauth": "^2.0.1",
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "ethers": "^5.5.1",
-    "ipfs-http-client": "^55.0.0",
+    "ipfs-http-client": "^50.1.2",
     "magic-sdk": "^8.0.1",
     "masonic": "^3.6.1",
-    "next": "^11.1.2",
+    "next": "^11.1.4",
     "next-redux-wrapper": "^7.0.5",
     "path": "^0.12.7",
     "react": "17.0.2",
