--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
+    "draftjs-to-html": "^0.9.1",
     "ethers": "^5.5.1",
     "ipfs-http-client": "^50.1.2",
     "magic-sdk": "^8.0.1",
@@ -25,6 +26,7 @@
     "react-bootstrap": "^2.0.0-rc.1",
     "react-bootstrap-typeahead": "^6.0.0-alpha.4",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-component": "^6.3.0",
