--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
+    "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "ethers": "^5.5.1",
     "ipfs-http-client": "^50.1.2",
