Add notificaions page, add suggested pets in explore, separate events page into different tabs based on start and end time, fix error is raised on masonry issue

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.16.12",
     "@magic-ext/oauth": "^2.0.1",
     "@reduxjs/toolkit": "^1.6.2",
+    "@wojtekmaj/react-datetimerange-picker": "^3.5.0",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "draftjs-to-html": "^0.9.1",
